--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/bot-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="AgentBee Discord Bot Dashboard - Verwalte deinen Discord Server" />
+    <meta name="theme-color" content="#8B5CF6" />
+    <title>AgentBee Bot Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
