--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2,7 +2,11 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/bot-icon.svg" />
+    <!-- Multiple Favicon Formats für bessere Kompatibilität -->
+    <link rel="icon" type="image/svg+xml" href="/bot-icon.svg?v=2025" />
+    <link rel="icon" type="image/png" href="/bot-icon.svg?v=2025" />
+    <link rel="shortcut icon" href="/bot-icon.svg?v=2025" />
+    <link rel="apple-touch-icon" href="/bot-icon.svg?v=2025" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AgentBee Discord Bot Dashboard - Verwalte deinen Discord Server" />
     <meta name="theme-color" content="#8B5CF6" />
